# opencl-helloworld

./: CMakeLists.txt  HelloWorld.cpp  readme.md
